--- a/styles/base/_base.scss
+++ b/styles/base/_base.scss
@@ -4,10 +4,8 @@
 
 html {
     font-size: 62.5%;
-}
-
-html {
-    font-size: 62.5%;
+    height: 100%;
+    width: 100%;
 }
 
 body {
@@ -15,6 +13,8 @@ body {
     font-family: Helvetica, Arial, sans-serif;
     font-size: $m-size;
     line-height: 1.6;
+    height: 100%;
+    width: 100%;
 }
 
 button {
