--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -12,3 +12,4 @@
 @import './components/currency-display';
 @import './components/main-page';
 @import './components/loading-screen';
+@import './components/material-list';
