--- a/styles/base/_base.scss
+++ b/styles/base/_base.scss
@@ -10,6 +10,7 @@ html {
 
 body {
     color: $darker-gray;
+    background: $gray;
     font-family: Helvetica, Arial, sans-serif;
     font-size: $m-size;
     line-height: 1.6;
