--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -13,3 +13,4 @@
 @import './components/main-page';
 @import './components/loading-screen';
 @import './components/material-list';
+@import './components/recipe-page';
