--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -14,3 +14,4 @@
 @import './components/loading-screen';
 @import './components/material-list';
 @import './components/recipe-page';
+@import './components/tree-view';
