Added the item name to the top of the recipe page

--- a/styles/components/_recipe-page.scss
+++ b/styles/components/_recipe-page.scss
@@ -18,6 +18,10 @@
     }
 }
 
+.recipe-page__header-name {
+    margin-left: $l-size;
+}
+
 .recipe-page__content {
     flex-grow: 1;
     display: flex;
