--- a/styles/components/_material-list.scss
+++ b/styles/components/_material-list.scss
@@ -1,4 +1,21 @@
 .materials-list {
+    flex: 1;
+    bottom: 0;
+    right: 0;
+    max-width: 24rem;
+    margin-left: $xs-size;
+}
+
+.materials-list__container {
+    height: 100%;
+    position: relative;
+}
+
+.materials-list__content {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    overflow-y: auto;
     width: 24rem;
     display: flex;
     flex-direction: column;
