--- a/styles/components/_recipe-page.scss
+++ b/styles/components/_recipe-page.scss
@@ -2,6 +2,16 @@
     display: flex;
     flex-direction: column;
     height: 100%;
+    position: relative;
+}
+
+.recipe-page__container {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
 }
 
 .recipe-page__header {
