Added the ability to drag the tree view

--- a/styles/components/_tree-view.scss
+++ b/styles/components/_tree-view.scss
@@ -18,5 +18,12 @@
 
 #tree-view__display {
     position: absolute;
-    cursor: grab;
+}
+
+.dragger--grab {
+    cursor: grab
+}
+
+.dragger--grabbing {
+    cursor: grabbing
 }
