--- a/styles/components/_material-list.scss
+++ b/styles/components/_material-list.scss
@@ -4,6 +4,8 @@
     right: 0;
     max-width: 24rem;
     margin-left: $xs-size;
+    padding-right: $xs-size;
+
 }
 
 .materials-list__container {
@@ -20,6 +22,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    padding-right: $xs-size;
 }
 
 .materials-list__title {
