Updated the styling on the search filters

--- a/styles/base/_universal.scss
+++ b/styles/base/_universal.scss
@@ -61,3 +61,11 @@
 .legendary-border {
     border: 1px solid $rarity-legendary;
 }
+
+.button {
+    background: $darker-gray;
+    color: $gray;
+    padding: $s-size 0;
+    border: none;
+    font-weight: 700;
+}
