--- a/styles/components/_search-filter.scss
+++ b/styles/components/_search-filter.scss
@@ -1,10 +1,31 @@
 .search-filter {
-    overflow: auto;
+    position: relative;
+    height: 100%;
     width: 20rem;
+}
+
+.search-filter__container {
+    position: absolute;
+    overflow: auto;
+    width: 100%;
+    height: 100%;
     padding: 0 $xs-size;
 }
 
 .search-filter__form {
     display: flex;
     flex-direction: column;
+    padding-bottom: $m-size;
+}
+
+.search-filter__form-group {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: $m-size;
+
+    label {
+        font-size: 1.8rem;
+        color: $darker-gray;
+        font-weight: 700;
+    }
 }
