--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -15,3 +15,4 @@
 @import './components/material-list';
 @import './components/recipe-page';
 @import './components/tree-view';
+@import './components/about';
