Added a link to the wiki page for base materials

--- a/styles/components/_material-list.scss
+++ b/styles/components/_material-list.scss
@@ -51,6 +51,11 @@
     display: flex;
     justify-content: start;
     align-items: center;
+
+    a {
+        color: inherit;
+        text-decoration: none;
+    }
 }
 
 .materials-list--mats__icon {
