--- a/styles/components/_material-list.scss
+++ b/styles/components/_material-list.scss
@@ -5,7 +5,6 @@
     max-width: 24rem;
     margin-left: $xs-size;
     padding-right: $xs-size;
-
 }
 
 .materials-list__container {
@@ -36,6 +35,7 @@
 .materials-list--mats__container {
     display: flex;
     justify-content: start;
+    animation: fadein .5s ease;
 }
 
 .materials-list--mats__count {
